add adjustRow and validateRowSize