@@ -1,6 +1,5 @@
-package keyhub.data.simpleimplement;
+package keyhub.data.tbl;
 
-import keyhub.data.tbl.Tbl;
 import keyhub.data.join.InnerJoinSet;
 import keyhub.data.join.JoinSet;
 import keyhub.data.join.LeftJoinSet;
@@ -15,7 +14,7 @@ import java.util.Map;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-public class TblValueTest {
+public class TblVariableTest {
 
     @Nested
     class SelectTest{
@@ -25,12 +24,7 @@ public class TblValueTest {
             List<Object> data1 = Arrays.asList(1, "aaa");
             List<Object> data2 = Arrays.asList(2, "bbb");
             List<Object> data3 = Arrays.asList(3, "ccc");
-            Tbl tbl = Tbl.builder()
-                    .addColumns(columns)
-                    .addRow(data1)
-                    .addRow(data2)
-                    .addRow(data3)
-                    .build();
+            Tbl tbl = new TblVariable(columns, List.of(data1, data2, data3));
 
             Tbl result = tbl.selectAll();
             assertEquals(2, result.getColumns().size());
@@ -41,15 +35,10 @@ public class TblValueTest {
         @Test
         public void testSelect(){
             List<String> columns = List.of("id", "name");
-            List<Object> data1 = Arrays.asList(1, "aaa");
-            List<Object> data2 = Arrays.asList(2, "bbb");
-            List<Object> data3 = Arrays.asList(3, "ccc");
-            Tbl tbl = Tbl.builder()
-                    .addColumns(columns)
-                    .addRow(data1)
-                    .addRow(data2)
-                    .addRow(data3)
-                    .build();
+            TblVariable tbl = new TblVariable(columns);
+            tbl.addRow(Arrays.asList(1, "aaa"));
+            tbl.addRow(Arrays.asList(2, "bbb"));
+            tbl.addRow(Arrays.asList(3, "ccc"));
 
             Tbl result = tbl.select("id");
             System.out.println(result.getColumns());
@@ -70,12 +59,8 @@ public class TblValueTest {
             List<Object> data1 = Arrays.asList(1, "aaa");
             List<Object> data2 = Arrays.asList(2, "bbb");
             List<Object> data3 = Arrays.asList(3, "ccc");
-            Tbl tbl = Tbl.builder()
-                    .addColumns(columns)
-                    .addRow(data1)
-                    .addRow(data2)
-                    .addRow(data3)
-                    .build();
+            TblVariable tbl = new TblVariable(columns);
+            tbl.addRows(List.of(data1, data2, data3));
 
             tbl.where("id", "==", 2);
             System.out.println(tbl.getRows());
@@ -86,16 +71,12 @@ public class TblValueTest {
 
         @Test
         public void testWhereEquals2() {
-            List<String> columns = List.of("id", "name");
+            TblVariable tbl = new TblVariable();
+            tbl.addColumns(List.of("id", "name"));
             List<Object> data1 = Arrays.asList(1, "aaa");
             List<Object> data2 = Arrays.asList(2, "bbb");
             List<Object> data3 = Arrays.asList(3, "ccc");
-            Tbl tbl = Tbl.builder()
-                    .addColumns(columns)
-                    .addRow(data1)
-                    .addRow(data2)
-                    .addRow(data3)
-                    .build();
+            tbl.addRows(List.of(data1, data2, data3));
 
             tbl.where("name", "==", "bbb");
             System.out.println(tbl.getRows());
@@ -106,16 +87,12 @@ public class TblValueTest {
 
         @Test
         public void testWhereNotEquals() {
-            List<String> columns = List.of("id", "name");
-            List<Object> row1 = Arrays.asList(1, "aaa");
-            List<Object> row2 = Arrays.asList(2, "bbb");
-            List<Object> row3 = Arrays.asList(3, "ccc");
-            Tbl tbl = Tbl.builder()
-                    .addColumns(columns)
-                    .addRow(row1)
-                    .addRow(row2)
-                    .addRow(row3)
-                    .build();
+            TblVariable tbl = new TblVariable()
+                    .addColumn("id")
+                    .addColumn("name")
+                    .addRow(Arrays.asList(1, "aaa"))
+                    .addRow(Arrays.asList(2, "bbb"))
+                    .addRow(Arrays.asList(3, "ccc"));
 
             tbl.where("name", "!=", "bbb");
             assertEquals(2, tbl.getRows().size());
@@ -128,12 +105,7 @@ public class TblValueTest {
             List<Object> row1 = Arrays.asList(1, "aaa");
             List<Object> row2 = Arrays.asList(2, "bbb");
             List<Object> row3 = Arrays.asList(3, "ccc");
-            Tbl tbl = Tbl.builder()
-                    .addColumns(columns)
-                    .addRow(row1)
-                    .addRow(row2)
-                    .addRow(row3)
-                    .build();
+            Tbl tbl = new TblVariable(columns, List.of(row1, row2, row3));
 
             tbl.where("id", ">", 1);
             assertEquals(2, tbl.getRows().size());
@@ -146,12 +118,7 @@ public class TblValueTest {
             List<Object> row1 = Arrays.asList(1, "aaa");
             List<Object> row2 = Arrays.asList(2, "bbb");
             List<Object> row3 = Arrays.asList(3, "ccc");
-            Tbl tbl = Tbl.builder()
-                    .addColumns(columns)
-                    .addRow(row1)
-                    .addRow(row2)
-                    .addRow(row3)
-                    .build();
+            Tbl tbl = new TblVariable(columns, List.of(row1, row2, row3));
 
             tbl.where("id", "<", 3);
 
@@ -166,19 +133,17 @@ public class TblValueTest {
         @Test
         @DisplayName("Test Inner Join Success")
         public void testInnerJoin(){
-            Tbl left = Tbl.builder()
-                    .addColumns(List.of("id", "name"))
-                    .addRow(List.of(1, "Alice"))
-                    .addRow(List.of(2, "Bob"))
-                    .addRow(List.of(3, "Charlie"))
-                    .build();
+            Tbl left = new TblVariable(List.of("id", "name"), List.of(
+                    List.of(1, "Alice"),
+                    List.of(2, "Bob"),
+                    List.of(3, "Charlie")
+            ));
 
-            Tbl right = Tbl.builder()
-                    .addColumns(List.of("id", "age"))
-                    .addRow(List.of(1, 20))
-                    .addRow(List.of(3, 30))
-                    .addRow(List.of(4, 40))
-                    .build();
+            Tbl right = new TblVariable(List.of("id", "age"), List.of(
+                    List.of(1, 20),
+                    List.of(3, 30),
+                    List.of(4, 40)
+            ));
 
             JoinSet joinSet = InnerJoinSet.of(left, right)
                     .on("id")
@@ -197,7 +162,6 @@ public class TblValueTest {
             // 4
             assertEquals(4, result.getRow(0).size());
         }
-
     }
 
     @Nested
@@ -205,19 +169,17 @@ public class TblValueTest {
         @Test
         @DisplayName("Test Left Join Success")
         public void testLeftJoin(){
-            Tbl left = Tbl.builder()
-                    .addColumns(List.of("id", "name"))
-                    .addRow(List.of(1, "Alice"))
-                    .addRow(List.of(2, "Bob"))
-                    .addRow(List.of(3, "Charlie"))
-                    .build();
+            Tbl left = new TblVariable(List.of("id", "name"), List.of(
+                    List.of(1, "Alice"),
+                    List.of(2, "Bob"),
+                    List.of(3, "Charlie")
+            ));
 
-            Tbl right = Tbl.builder()
-                    .addColumns(List.of("id", "age"))
-                    .addRow(List.of(1, 20))
-                    .addRow(List.of(3, 30))
-                    .addRow(List.of(4, 40))
-                    .build();
+            Tbl right = new TblVariable(List.of("id", "age"), List.of(
+                    List.of(1, 20),
+                    List.of(3, 30),
+                    List.of(4, 40)
+            ));
 
             JoinSet joinSet = LeftJoinSet.of(left, right)
                     .on("id")
@@ -236,7 +198,6 @@ public class TblValueTest {
             // 4
             assertEquals(4, result.getRow(0).size());
         }
-
     }
 
     @Nested
@@ -247,12 +208,7 @@ public class TblValueTest {
             List<Object> data1 = Arrays.asList(1, "aaa");
             List<Object> data2 = Arrays.asList(2, "bbb");
             List<Object> data3 = Arrays.asList(3, "ccc");
-            Tbl tbl = Tbl.builder()
-                    .addColumns(columns)
-                    .addRow(data1)
-                    .addRow(data2)
-                    .addRow(data3)
-                    .build();
+            Tbl tbl = new TblVariable(columns, List.of(data1, data2, data3));
 
             List<Map<String, Object>> result = tbl.toRowMapList();
             System.out.println(tbl.getColumns());
@@ -277,12 +233,7 @@ public class TblValueTest {
             List<Object> data1 = Arrays.asList(1, "aaa");
             List<Object> data2 = Arrays.asList(2, "bbb");
             List<Object> data3 = Arrays.asList(3, "ccc");
-            Tbl tbl = Tbl.builder()
-                    .addColumns(columns)
-                    .addRow(data1)
-                    .addRow(data2)
-                    .addRow(data3)
-                    .build();
+            Tbl tbl = new TblVariable(columns, List.of(data1, data2, data3));
 
             Map<String, List<Object>> result = tbl.toColumnListMap();
             System.out.println(tbl.getColumns());
